[package]
name = "crypto"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
serialize = { workspace = true }
serialize_derive = { workspace = true }
openssl = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
tempfile = { workspace = true }