[package]
name = "nymlib"
version = { workspace = true }
edition = { workspace = true }
description = "Nymlib"
license = { workspace = true }

[dependencies]
serialize = { workspace = true }
serialize_derive = { workspace = true }
nymsocket = { workspace = true }
crypto = { workspace = true }
nym-sdk = { workspace = true }