[package]
name = "nymsocket"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
serialize = { workspace = true }
serialize_derive = { workspace = true }
tokio = { workspace = true }
nym-sdk = { workspace = true }
ed25519-zebra = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }